# ez-stream

./: .gitignore  README.md  cli.py  controller.py  downloader.py  engine.py  gui.py  main.py  model.py  opencode.json  player.py  pyproject.toml  requirements.txt  stream_torrent.py  ui.py
browser_ui/: omdb_api.py  server.py  torrents_api.py
browser_ui/templates/: index.html
