[project]
name = "ez-stream"
version = "0.1.0"
description = "Stream video torrent files directly to VLC or in your browser."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "libtorrent>=2.0.11",
]
